--- a/GenericJsonWebHook/packages.config
+++ b/GenericJsonWebHook/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
@@ -17,7 +18,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebHooks.Common" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebHooks.Receivers" version="1.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebHooks.Receivers.GitHub" version="1.2.0-rc1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHooks.Receivers.Bitbucket" version="1.2.0-rc1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebHooks.Receivers.Generic" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
